--- a/info/dictionary.html
+++ b/info/dictionary.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>dictionary</title>
+  <title>Dictionary</title>
   <link rel="stylesheet" href="../rgveda.css" />
   <link rel="icon" type="image/png" href="../media/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
