--- a/info/dictionary.html
+++ b/info/dictionary.html
@@ -12,10 +12,211 @@
 
   <!-- title -->
   <h1 class="heading">Dictionary</h1>
-  <p class="subtitle">list of sanskrit words within the ṛgveda</p>
+  <p class="subtitle">List of Sanskrit words within the Ṛgveda</p>
   <hr>
-  <div>
-    <!-- Books -->
+
+ <!-- Conceptual Words -->
+<div class="section">
+  <h2>Concepts</h2>
+  <ul>
+    <li><strong>Brahman:</strong> Ultimate reality or universal principle</li>
+    <li><strong>Ṛta:</strong> Cosmic order or truth maintained through rituals and sacrifices</li>
+    <li><strong>Dharma:</strong> Moral duty, righteousness, or cosmic law</li>
+    <li><strong>Ātman:</strong> Self or soul</li>
+    <li><strong>Karma:</strong> Action, deed, or the principle of cause and effect</li>
+    <li><strong>Satya:</strong> Truth</li>
+    <li><strong>Tapas:</strong> Austerity, spiritual practice</li>
+    <li><strong>Deva:</strong> Deity or god</li>
+    <li><strong>Asura:</strong> Demon or anti-god</li>
+    <li><strong>Māyā:</strong> Illusion or magic</li>
+    <li><strong>Rāṣṭra:</strong> Kingdom or realm</li>
+    <li><strong>Ṛṣi:</strong> Sage or seer</li>
+    <li><strong>Mantra:</strong> Sacred utterance or sound</li>
+    <li><strong>Vāc:</strong> Speech</li>
+    <li><strong>Sāma:</strong> Melody, song, or chant</li>
+    <li><strong>Loka:</strong> World or realm</li>
+    <li><strong>Svarga:</strong> Heaven or celestial realm</li>
+    <li><strong>Naraka:</strong> Hell or underworld</li>
+  </ul>
+</div>
+
+<!-- Vedic Rituals -->
+<div class="section">
+  <h2>Vedic Rituals</h2>
+  <ul>
+    <li><strong>Yajña:</strong> Ritual sacrifice or offering</li>
+    <li><strong>Agnihotra:</strong> Daily fire ritual</li>
+    <li><strong>Homa:</strong> Fire ritual involving offerings</li>
+    <li><strong>Upākarma:</strong> Annual ritual of changing the sacred thread</li>
+    <li><strong>Prāyaścitta:</strong> Atonement or expiatory ritual</li>
+    <li><strong>Śrāddha:</strong> Ancestor worship ritual</li>
+    <li><strong>Avabhṛtha:</strong> Post-ritual bath</li>
+    <li><strong>Samidh:</strong> Ritual kindling of fire</li>
+    <li><strong>Abhiṣeka:</strong> Ritual anointment</li>
+    <li><strong>Homāgni:</strong> The fire used in sacrificial rituals</li>
+    <li><strong>Ājya:</strong> Ghee or clarified butter used in rituals</li>
+    <li><strong>Yāga:</strong> Ritual sacrifice or worship</li>
+    <li><strong>Āhuti:</strong> Oblation, offering into the fire</li>
+    <li><strong>Śānti:</strong> Ritual for peace or tranquility</li>
+    <li><strong>Puroḍāśa:</strong> Ritual cake or offering</li>
+    <li><strong>Prakṣālaṇa:</strong> Ritual ablution or cleansing</li>
+    <li><strong>Sūrya Namaskāra:</strong> Sun salutation ritual</li>
+  </ul>
+</div>
+
+
+
+  <!-- Family-related Words -->
+  <div class="section">
+  <h2>Family</h2>
+  <ul>
+    <li><strong>Gṛha:</strong> Home or household</li>
+    <li><strong>Ātman:</strong> Soul or self</li>
+    <li><strong>Janman:</strong> Birth or lineage</li>
+    <li><strong>Pitṛ:</strong> Father, ancestor</li>
+    <li><strong>Mātṛ:</strong> Mother</li>
+    <li><strong>Putrā:</strong> Son</li>
+    <li><strong>Duhitā:</strong> Daughter</li>
+    <li><strong>Svāsara:</strong> Brother-in-law or sister-in-law</li>
+    <li><strong>Bhāgina:</strong> Sister</li>
+    <li><strong>Bhrātṛ:</strong> Brother</li>
+    <li><strong>Śvaśura:</strong> Father-in-law</li>
+    <li><strong>Śvashura:</strong> Mother-in-law</li>
+    <li><strong>Samdhi:</strong> Father-in-law or mother-in-law (depending on context)</li>
+    <li><strong>Snushā:</strong> Daughter-in-law</li>
+    <li><strong>Daivā:</strong> Sister-in-law</li>
+    <li><strong>Devā:</strong> Brother-in-law</li>
+    <li><strong>Samdam:</strong> Parents-in-law</li>
+    <li><strong>Prabhu:</strong> Master, lord, husband</li>
+    <li><strong>Patni:</strong> Wife</li>
+  </ul>
+</div>
+
+
+<!-- Group-related Words -->
+<div class="section">
+  <h2>Groups</h2>
+  <ul>
+    <li><strong>Ārya:</strong> A member of Vedic society, who is noble and honorable</li>
+    <li><strong>Dasyu:</strong> Enemy, demon, or robber (often used for people perceived as hostile or non-Vedic)</li>
+    <li><strong>Varṇa:</strong> Social class or caste division</li>
+    <li><strong>Dvija:</strong> Twice-born, referring to initiation ceremony</li>
+    <li><strong>Jāti:</strong> Birth group or sub-caste</li>
+    <li><strong>Janapada:</strong> Nation or country</li>
+    <li><strong>Samāja:</strong> Community or assembly</li>
+    <li><strong>Kula:</strong> Family or clan</li>
+    <li><strong>Gotra:</strong> Lineage or clan</li>
+    <li><strong>Viś:</strong> Settlement</li>
+    <li><strong>Gana:</strong> Group, multitude, or tribe</li>
+    <li><strong>Brāhmaṇa:</strong> Priest or scholarly class</li>
+    <li><strong>Kṣatriya:</strong> Warrior or ruling class</li>
+    <li><strong>Vaiśya:</strong> Merchant or agricultural class, a member of the viś</li>
+    <li><strong>Śūdra:</strong> Servant or laborer class, typically non-ārya who became servants</li>
+    <li><strong>Sākhā:</strong> Branch or school (of a Vedic tradition)</li>
+    <li><strong>Vṛnda:</strong> Group or assembly</li>
+    <li><strong>Dāsa:</strong> Servant, slave, or bondsman</li>
+    <li><strong>Dāsī:</strong> Female servant or slave</li>
+    <li><strong>Mitra:</strong> Friend or ally</li>
+    <li><strong>Śatru:</strong> Enemy or adversary</li>
+    <li><strong>Yajamāna:</strong> Sacrificer or patron (the person for whom the sacrifice is performed)</li>
+    <li><strong>Purohita:</strong> Family priest or chief priest</li>
+  </ul>
+</div>
+
+  <!-- Animals -->
+<div class="section">
+  <h2>Animals</h2>
+  <ul>
+    <li><strong>Gau:</strong> Cow</li>
+    <li><strong>Aśva:</strong> Horse</li>
+    <li><strong>Ukṣā:</strong> Cow</li>
+    <li><strong>Vṛṣabha:</strong> Bull</li>
+    <li><strong>Varāha:</strong> Boar</li>
+    <li><strong>Mriga:</strong> Deer</li>
+    <li><strong>Haṁsa:</strong> Swan or goose</li>
+    <li><strong>Kṛśānu:</strong> Antelope</li>
+    <li><strong>Śarabha:</strong> Mythical creature, sometimes interpreted as a deer or antelope</li>
+    <li><strong>Vṛka:</strong> Wolf</li>
+    <li><strong>Ṛkṣa:</strong> Bear</li>
+    <li><strong>Varaṇa:</strong> Boar or pig</li>
+    <li><strong>Mṛgā:</strong> Doe or hind</li>
+    <li><strong>Khara:</strong> Ass or donkey</li>
+    <li><strong>Uṣṭra:</strong> Camel</li>
+    <li><strong>Śaśa:</strong> Hare or rabbit</li>
+    <li><strong>Śyena:</strong> Falcon or hawk</li>
+    <li><strong>Garuda:</strong> Eagle, specifically the mythical bird associated with Vishnu</li>
+    <li><strong>Mayūra:</strong> Peacock</li>
+    <li><strong>Kaṇṭaka:</strong> Porcupine</li>
+    <li><strong>Vāraha:</strong> Wild boar</li>
+    <li><strong>Meshá:</strong> Ram or sheep</li>
+  </ul>
+</div>
+
+
+
+<!-- Food and Drink -->
+<div class="section">
+  <h2>Food and Drink</h2>
+  <ul>
+    <li><strong>Ājya:</strong> Ghee or clarified butter</li>
+    <li><strong>Soma:</strong> Sacred ritual drink</li>
+    <li><strong>Māṁsa:</strong> Meat </li>
+    <li><strong>Aśva-māṁsa:</strong> Horse meat, specifically used in sacrificial rituals</li>
+    <li><strong>Go-māṁsa:</strong> Cow meat </li>
+    <li><strong>Matsya:</strong> Fish </li>
+    <li><strong>Puroḍāśa:</strong> Oblation or offering made of grain or flour</li>
+    <li><strong>Pāyasa:</strong> Rice pudding or milk porridge</li>
+    <li><strong>Madhu:</strong> Honey</li>
+    <li><strong>Apām:</strong> Water</li>
+    <li><strong>Phāṇita:</strong> Sweetened rice or rice mixed with honey</li>
+    <li><strong>Dadhi:</strong> Curd or yogurt</li>
+    <li><strong>Piśāca:</strong> Possibly a fermented drink or a kind of food, mentioned in ritual contexts</li>
+    <li><strong>Ana:</strong> Food or grain, generally offered in rituals</li>
+    <li><strong>Śuddhi:</strong> Purified or consecrated food, prepared for rituals</li>
+    <li><strong>Karambha:</strong> Food offering</li>
+    <li><strong>Bārhaspatya:</strong> Soma mixed with milk and curds</li>
+    <li><strong>Yavasa:</strong> Soma drink</li>
+    <li><strong>Medhya:</strong> A kind of food used in rituals</li>
+    <li><strong>Udaka:</strong> Water, especially used in rituals</li>
+    <li><strong>Anna:</strong> Food, grain, or rice</li>
+    <li><strong>Madya:</strong> Fermented or intoxicating drink</li>
+    <li><strong>Prāṇa:</strong> A beverage or liquid substance, possibly related to soma</li>
+    <li><strong>Piśitāśana:</strong> Cooked food or meal</li>
+    <li><strong>Vājī:</strong> Beverage or drink, possibly related to soma</li>
+    <li><strong>Kukkuṭa-māṁsa:</strong> Chicken meat</li>
+    <li><strong>Śaśī-māṁsa:</strong> Hare or rabbit meat</li>
+    <li><strong>Meṣa-māṁsa:</strong> Goat or sheep meat</li>
+
+  </ul>
+</div>
+
+  <!-- Family-related Words -->
+  <div class="section">
+    <h2>Deities</h2>
+    <ul>
+      
+    </ul>
+  </div>
+
+  <!-- Nature and Elements -->
+  <div class="section">
+    <h2>Nature and Elements</h2>
+    <ul>
+      <li><strong>Vāyu:</strong> Wind or air.</li>
+      <li><strong>Āpa:</strong> Water.</li>
+      <li><strong>Prithvī:</strong> Earth.</li>
+      <li><strong>Ākāśa:</strong> Sky or space.</li>
+    </ul>
+  </div>
+
+  <!-- Time and Seasons -->
+  <div class="section">
+    <h2>Time and Seasons</h2>
+    <ul>
+      <li><strong>Ritu:</strong> Season.</li>
+      <li><strong>Samvatsara:</strong> Year or cycle of time.</li>
+    </ul>
+  </div>
 
 </body>
 </html>
