--- a/info/culture.html
+++ b/info/culture.html
@@ -12,36 +12,42 @@
 
   <!-- title -->
   <h1 class="heading">Culture</h1>
-  <p class="subtitle">The Culture of the Vedic Aryans</p>
+  <p class="subtitle">The Culture of the Vedic Āryans</p>
   <hr>
 
   <!-- Main content -->
   <div>
-    <!-- Section: Introduction to Vedic Aryans -->
+    <!-- Section: Introduction to Vedic Āryans -->
     <div class="section">
-      <h2>Introduction to Vedic Aryans</h2>
-      <p>The Vedic Aryans were a pastoral Indo-Aryan people who settled in the northwestern regions of the Indian subcontinent around 1500 BCE. They are primarily known from the Rigveda, the oldest of the four Vedas, which are ancient Indian sacred texts.</p>
+      <h2>Introduction to Vedic Āryans</h2>
+      <p>The Vedic Āryans were a pastoral Indo-Aryan people who settled in the northwestern regions of the Indian subcontinent around 1500 BCE. They are primarily known from the Ṛgveda, the oldest of the four Vedas, which are ancient Indian sacred texts.</p>
       <p>Their culture was deeply rooted in a pastoral lifestyle, where cattle rearing and agriculture played significant roles in their economy and daily life.</p>
     </div>
 
     <!-- Section: Social Structure -->
     <div class="section">
       <h2>Social Structure</h2>
-      <p>Vedic society was organized into varnas (social classes):</p>
+      <p>Vedic society was organized into varṇas (social classes):</p>
       <ul>
-        <li><strong>Kshatriyas:</strong> Warriors and rulers who upheld social order and defended the community.</li>
-        <li><strong>Brahmins:</strong> Priests and scholars responsible for religious rituals and the preservation of sacred knowledge.</li>
-        <li><strong>Vaishyas:</strong> Farmers, traders, and artisans engaged in agriculture and commerce.</li>
-        <li><strong>Shudras:</strong> Laborers and service providers who supported the other varnas.</li>
+        <li><strong>Kṣatriyas:</strong> Warriors and rulers who upheld social order and defended the community.</li>
+        <li><strong>Brāhmaṇas:</strong> Priests and scholars responsible for religious rituals and the preservation of sacred knowledge.</li>
+        <li><strong>Vaiśyas:</strong> Farmers, traders, and artisans engaged in agriculture and commerce.</li>
+        <li><strong>Śūdras:</strong> Laborers and service providers who supported the other varṇas.</li>
       </ul>
       <p>This hierarchical system defined roles and responsibilities based on birth and occupation, with castes often being inherited from their father.</p>
     </div>
 
-    <!-- Section: Pastoral Lifestyle -->
+    <!-- Section: Pastoral and Agrarian Transition -->
     <div class="section">
-      <h2>Pastoral Lifestyle</h2>
-      <p>The Vedic Aryans were predominantly pastoralists, relying on cattle herding as a primary economic activity. Cattle were not only a source of wealth but also played a central role in religious rituals and social status.</p>
-      <p>They moved seasonally with their herds, following grazing patterns and water sources, which influenced their settlement patterns and societal structure.</p>
+      <h2>Pastoral and Agrarian Transition</h2>
+      <p>The early Vedic period marked a transition from nomadic pastoralism to settled village communities. Initially, cattle were the dominant commodity, influencing social and economic structures:</p>
+      <ul>
+        <li><strong>Gotra:</strong> Signified the endogamous kinship group, centered around cattle.</li>
+        <li><strong>Gaviṣṭi:</strong> Term for warfare, originally meaning "searching for cows."</li>
+        <li><strong>Niyoga (Levirate):</strong> Allowed a widow to marry her husband’s brother, reinforcing patriarchal family structures.</li>
+        <li><strong>Grama:</strong> A community of families forming the basic settlement unit.</li>
+      </ul>
+      <p>Clan assemblies (vidāthā, samiti, sabhā) and rituals like yajña (Vedic sacrifice) were pivotal, led by a chief who functioned as a war leader and received tribute (bali) for protecting the clan. Punishment mirrored the wergild principle, with compensation based on social rank.</p>
     </div>
 
     <!-- Section: Chariot Warfare -->
@@ -51,12 +57,11 @@
       <p>Chariot races and feats of archery were celebrated in religious and social contexts, highlighting their importance in both warfare and ceremonial life.</p>
     </div>
 
-    <!-- Section: Ideological Stance as Aryans -->
+    <!-- Section: Ideological Stance as Āryans -->
     <div class="section">
-      <h2>Ideological Stance as Aryans</h2>
-      <p>The term "Ārya" is a term for the vedic tribes that spoke sanskrit and followed the vedic religion distinguishing themselves from the "Dasyu," a term often used the enemies who were natives of India.</p>
-      <p>The Vedic Aryans identified themselves as Ārya meaning noble, adhering to a code of conduct that emphasized bravery, honesty, and adherence to dharma (duty and righteousness).</p>
-      <p>They viewed their conquests and expansions as a civilizing mission, spreading their language, culture, and religious practices while maintaining distinctions between themselves and other indigenous groups.</p>
+      <h2>Ideological Stance as Āryans</h2>
+      <p>The term "Ārya" is a term for the Vedic tribes that spoke Sanskrit and followed the Vedic religion, distinguishing themselves from the "Dasyu," native adversaries.</p>
+      <p>The Vedic Āryans identified as "Ārya," emphasizing bravery, honesty, and adherence to dharma (duty and righteousness). They viewed their expansions as a mission to civilize, spreading language, culture, and religion while maintaining distinctions from indigenous groups.</p>
     </div>
 
     <!-- Section: Religion and Beliefs -->
@@ -64,10 +69,10 @@
       <h2>Religion and Beliefs</h2>
       <p>Religion played a central role in Vedic culture, revolving around rituals, sacrifices, and reverence for natural forces and deities. Key aspects of their religious beliefs include:</p>
       <ul>
-        <li><strong>Vedas:</strong> Sacred texts including the Rigveda, Samaveda, Yajurveda, and Atharvaveda, containing hymns, rituals, and philosophical reflections.</li>
+        <li><strong>Vedas:</strong> Sacred texts including the Ṛgveda, Sāmaveda, Yajurveda, and Atharvaveda, containing hymns, rituals, and philosophical reflections.</li>
         <li><strong>Ṛta:</strong> The concept of cosmic order and truth, maintained through rituals and sacrifices to appease gods and uphold harmony.</li>
-        <li><strong>Deities:</strong> Important gods included Indra, Agni, Varuna, and Surya.</li>
-        <li><strong>Yajna:</strong> Ritual sacrifices performed by priests to maintain cosmic order and prosperity.</li>
+        <li><strong>Deities:</strong> Important gods included Indra, Agni, Varuṇa, and Sūrya.</li>
+        <li><strong>Yajña:</strong> Ritual sacrifices performed by priests to maintain cosmic order and prosperity.</li>
         <li><strong>Karma and Dharma:</strong> Concepts of moral duty (dharma) and the consequences of actions (karma) were foundational to their ethical and social framework.</li>
       </ul>
     </div>
@@ -75,10 +80,10 @@
     <!-- Section: Wars and Conflicts -->
     <div class="section">
       <h2>Wars and Conflicts</h2>
-      <p>The Vedic Aryans faced various conflicts and wars as they settled and expanded in the Indian subcontinent. These conflicts were often depicted in their literature and hymns:</p>
+      <p>The Vedic Āryans faced various conflicts and wars as they settled and expanded in the Indian subcontinent. These conflicts were often depicted in their literature and hymns:</p>
       <ul>
-        <li><strong>Dasarajna:</strong> The Battle of the Ten Kings, described in the Rigveda, where the Bharata tribe emerged victorious against their rivals.</li>
-        <li><strong>Devi Sarasvati:</strong> The hymn dedicated to Devi Sarasvati in the Rigveda describes a battle where she aided the Aryans in overcoming enemies.</li>
+        <li><strong>Dasarajña:</strong> The Battle of the Ten Kings, described in the Ṛgveda, where the Bhārata tribe emerged victorious against their rivals.</li>
+        <li><strong>Devi Sarasvatī:</strong> The hymn dedicated to Devī Sarasvatī in the Ṛgveda describes a battle where she aided the Āryans in overcoming enemies.</li>
         <li><strong>Wars against the Dasyu:</strong> The Vedic texts also describe conflicts with indigenous peoples termed as Dasyu, whom they viewed as adversaries resisting their expansion and civilizational mission.</li>
       </ul>
     </div>
@@ -88,8 +93,8 @@
       <h2>The Vedas</h2>
       <p>The Vedic literature consists of four main Vedas, each serving distinct purposes:</p>
       <ul>
-        <li><strong>Rigveda:</strong> Oldest Veda, consisting of hymns dedicated to various deities and showcasing early religious practices and societal norms.</li>
-        <li><strong>Samaveda:</strong> Collection of melodies and chants used in rituals, emphasizing the musical aspect of Vedic worship.</li>
+        <li><strong>Ṛgveda:</strong> Oldest Veda, consisting of hymns dedicated to various deities and showcasing early religious practices and societal norms.</li>
+        <li><strong>Sāmaveda:</strong> Collection of melodies and chants used in rituals, emphasizing the musical aspect of Vedic worship.</li>
         <li><strong>Yajurveda:</strong> Compilation of prose mantras and verses used by priests during rituals, focusing on sacrificial formulas.</li>
         <li><strong>Atharvaveda:</strong> Contains hymns, charms, and spells for practical aspects of life, including healing and protection.</li>
       </ul>
@@ -99,13 +104,13 @@
     <!-- Section: Legacy -->
     <div class="section">
       <h2>Legacy</h2>
-      <p>The legacy of the Vedic Aryans is profound, shaping the cultural and spiritual landscape of India for millennia:</p>
+      <p>The legacy of the Vedic Āryans is profound, shaping the cultural and spiritual landscape of India for millennia:</p>
       <ul>
         <li><strong>Hinduism:</strong> Many foundational elements of Hinduism, including religious practices, rituals, and philosophical concepts, trace their origins to Vedic traditions.</li>
         <li><strong>Sanskrit Literature:</strong> The development of Sanskrit as a literary and religious language owes much to the Vedic period, influencing subsequent Indian literature.</li>
         <li><strong>Cultural Contributions:</strong> Their advancements in metallurgy, agriculture, and social organization laid the groundwork for early Indian civilization.</li>
       </ul>
-      <p>Overall, the Vedic Aryans left a lasting imprint on Indian culture and continue to be revered for their contributions to religion, philosophy, and society.</p>
+      <p>Overall, the Vedic Āryans left a lasting imprint on Indian culture and continue to be revered for their contributions to religion, philosophy, and society.</p>
     </div>
 
   </div>
