--- a/info/dictionary.html
+++ b/info/dictionary.html
@@ -30,10 +30,7 @@
     <li><strong>Asura:</strong> Demon or anti-god</li>
     <li><strong>Māyā:</strong> Illusion or magic</li>
     <li><strong>Rāṣṭra:</strong> Kingdom or realm</li>
-    <li><strong>Ṛṣi:</strong> Sage or seer</li>
     <li><strong>Mantra:</strong> Sacred utterance or sound</li>
-    <li><strong>Vāc:</strong> Speech</li>
-    <li><strong>Sāma:</strong> Melody, song, or chant</li>
     <li><strong>Loka:</strong> World or realm</li>
     <li><strong>Svarga:</strong> Heaven or celestial realm</li>
     <li><strong>Naraka:</strong> Hell or underworld</li>
@@ -50,6 +47,7 @@
     <li><strong>Upākarma:</strong> Annual ritual of changing the sacred thread</li>
     <li><strong>Prāyaścitta:</strong> Atonement or expiatory ritual</li>
     <li><strong>Śrāddha:</strong> Ancestor worship ritual</li>
+    <li><strong>Snāna:</strong> Cleaning rites performed before rituals </li>
     <li><strong>Avabhṛtha:</strong> Post-ritual bath</li>
     <li><strong>Samidh:</strong> Ritual kindling of fire</li>
     <li><strong>Abhiṣeka:</strong> Ritual anointment</li>
@@ -58,9 +56,6 @@
     <li><strong>Yāga:</strong> Ritual sacrifice or worship</li>
     <li><strong>Āhuti:</strong> Oblation, offering into the fire</li>
     <li><strong>Śānti:</strong> Ritual for peace or tranquility</li>
-    <li><strong>Puroḍāśa:</strong> Ritual cake or offering</li>
-    <li><strong>Prakṣālaṇa:</strong> Ritual ablution or cleansing</li>
-    <li><strong>Sūrya Namaskāra:</strong> Sun salutation ritual</li>
   </ul>
 </div>
 
@@ -81,14 +76,11 @@
     <li><strong>Bhāgina:</strong> Sister</li>
     <li><strong>Bhrātṛ:</strong> Brother</li>
     <li><strong>Śvaśura:</strong> Father-in-law</li>
-    <li><strong>Śvashura:</strong> Mother-in-law</li>
+    <li><strong>Śvaśrū:</strong> Mother-in-law</li>
     <li><strong>Samdhi:</strong> Father-in-law or mother-in-law (depending on context)</li>
     <li><strong>Snushā:</strong> Daughter-in-law</li>
-    <li><strong>Daivā:</strong> Sister-in-law</li>
-    <li><strong>Devā:</strong> Brother-in-law</li>
-    <li><strong>Samdam:</strong> Parents-in-law</li>
     <li><strong>Prabhu:</strong> Master, lord, husband</li>
-    <li><strong>Patni:</strong> Wife</li>
+    <li><strong>Patnī:</strong> Wife</li>
   </ul>
 </div>
 
@@ -108,10 +100,12 @@
     <li><strong>Gotra:</strong> Lineage or clan</li>
     <li><strong>Viś:</strong> Settlement</li>
     <li><strong>Gana:</strong> Group, multitude, or tribe</li>
-    <li><strong>Brāhmaṇa:</strong> Priest or scholarly class</li>
-    <li><strong>Kṣatriya:</strong> Warrior or ruling class</li>
-    <li><strong>Vaiśya:</strong> Merchant or agricultural class, a member of the viś</li>
-    <li><strong>Śūdra:</strong> Servant or laborer class, typically non-ārya who became servants</li>
+    <li><strong>Brāhmaṇa:</strong> Priests or scholars</li>
+    <li><strong>Kṣatriya:</strong> Warriors and Kings</li>
+    <li><strong>Vaiśya:</strong> Merchants or agricultural workers, a member of the viś</li>
+    <li><strong>Śūdra:</strong> Servants and laborers, typically non-ārya who became servants</li>
+    <li><strong>Ṛṣi:</strong> Sage or seer</li>
+    <li><strong>Guru:</strong> Teacher or spiritual guide</li>
     <li><strong>Sākhā:</strong> Branch or school (of a Vedic tradition)</li>
     <li><strong>Vṛnda:</strong> Group or assembly</li>
     <li><strong>Dāsa:</strong> Servant, slave, or bondsman</li>
@@ -164,59 +158,52 @@
     <li><strong>Aśva-māṁsa:</strong> Horse meat, specifically used in sacrificial rituals</li>
     <li><strong>Go-māṁsa:</strong> Cow meat </li>
     <li><strong>Matsya:</strong> Fish </li>
-    <li><strong>Puroḍāśa:</strong> Oblation or offering made of grain or flour</li>
-    <li><strong>Pāyasa:</strong> Rice pudding or milk porridge</li>
+    <li><strong>Masūra:</strong> Lentils </li>
+    <li><strong>Puroḍāśa:</strong> Oblation or offering made of grains, flour and ghee</li>
+    <li><strong>Pāyasa:</strong> Rice pudding made with milk</li>
     <li><strong>Madhu:</strong> Honey</li>
     <li><strong>Apām:</strong> Water</li>
-    <li><strong>Phāṇita:</strong> Sweetened rice or rice mixed with honey</li>
     <li><strong>Dadhi:</strong> Curd or yogurt</li>
-    <li><strong>Piśāca:</strong> Possibly a fermented drink or a kind of food, mentioned in ritual contexts</li>
+    <li><strong>Mudga:</strong> Mung beans </li>
+    <li><strong>Masūra:</strong> Urad beans </li>
     <li><strong>Ana:</strong> Food or grain, generally offered in rituals</li>
     <li><strong>Śuddhi:</strong> Purified or consecrated food, prepared for rituals</li>
     <li><strong>Karambha:</strong> Food offering</li>
     <li><strong>Bārhaspatya:</strong> Soma mixed with milk and curds</li>
-    <li><strong>Yavasa:</strong> Soma drink</li>
-    <li><strong>Medhya:</strong> A kind of food used in rituals</li>
     <li><strong>Udaka:</strong> Water, especially used in rituals</li>
     <li><strong>Anna:</strong> Food, grain, or rice</li>
     <li><strong>Madya:</strong> Fermented or intoxicating drink</li>
-    <li><strong>Prāṇa:</strong> A beverage or liquid substance, possibly related to soma</li>
-    <li><strong>Piśitāśana:</strong> Cooked food or meal</li>
-    <li><strong>Vājī:</strong> Beverage or drink, possibly related to soma</li>
+    <li><strong>Sura:</strong> Alcoholic drink, although generally seen as bad</li>
     <li><strong>Kukkuṭa-māṁsa:</strong> Chicken meat</li>
     <li><strong>Śaśī-māṁsa:</strong> Hare or rabbit meat</li>
     <li><strong>Meṣa-māṁsa:</strong> Goat or sheep meat</li>
-
   </ul>
 </div>
 
-  <!-- Family-related Words -->
-  <div class="section">
-    <h2>Deities</h2>
-    <ul>
-      
-    </ul>
-  </div>
+<div class="section">
+  <h2>Nature and Elements</h2>
+  <ul>
+    <li><strong>Ākāśa:</strong> Sky or space.</li>
+    <li><strong>Vāyu:</strong> Wind or air.</li>
+    <li><strong>Agni:</strong> Fire.</li>
+    <li><strong>Jala:</strong> Water.</li>
+    <li><strong>Prithvī:</strong> Earth.</li>
+    <li><strong>Varṣā:</strong> Rain.</li>
+    <li><strong>Himā:</strong> Snow.</li>
+    <li><strong>Nadī:</strong> River.</li>
+    <li><strong>Sāgara:</strong> Sea.</li>
+    <li><strong>Parvata:</strong> Mountain.</li>
+    <li><strong>Candra:</strong> Moon.</li>
+    <li><strong>Sūrya:</strong> Sun.</li>
+    <li><strong>Van:</strong> Forest.</li>
+    <li><strong>Vṛkṣa:</strong> Tree.</li>
+    <li><strong>Megha:</strong> Cloud.</li>
+    <li><strong>Megha-garbha:</strong> Thunder.</li>
+    <li><strong>Vidyut:</strong> Lightning.</li>
+    <li><strong>Tara:</strong> Star.</li>
+  </ul>
+</div>
 
-  <!-- Nature and Elements -->
-  <div class="section">
-    <h2>Nature and Elements</h2>
-    <ul>
-      <li><strong>Vāyu:</strong> Wind or air.</li>
-      <li><strong>Āpa:</strong> Water.</li>
-      <li><strong>Prithvī:</strong> Earth.</li>
-      <li><strong>Ākāśa:</strong> Sky or space.</li>
-    </ul>
-  </div>
-
-  <!-- Time and Seasons -->
-  <div class="section">
-    <h2>Time and Seasons</h2>
-    <ul>
-      <li><strong>Ritu:</strong> Season.</li>
-      <li><strong>Samvatsara:</strong> Year or cycle of time.</li>
-    </ul>
-  </div>
 
 </body>
 </html>
